--- a/views/pages/site-lipsum-media.ejs
+++ b/views/pages/site-lipsum-media.ejs
@@ -14,17 +14,30 @@
 
 <body>
     <header>
-        <div class="header-content">
-            <img class="logo-icon" src="/images/site-lipsum-media/leaf.png">
-            <div class="header-title"><span style="font-weight: bold;">Lipsum</span> Media</div>
-            <div class="header-links">
-                <a class="link-section" href="#">home</a>/
-                <a class="link-section" href="#">about</a>/
-                <a class="link-section" href="#">work</a>/
-                <a class="link-section" href="#">services</a>/
-                <a class="link-section" href="#">resources</a>/
-                <a class="link-section" href="#">articles</a>/
-                <a class="link-section" href="#">contact</a>    
+        <div class="header-content clearfix">
+            <div>
+                Subscribe
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-facebook"></i>
+            </div>
+            <div>
+                <div class="col-sm-4 header-logo">
+                    <img class="logo-icon" src="/images/site-lipsum-media/leaf.png">
+                    <div class="header-title"><span style="font-weight: bold;">Lipsum</span> Media</div>
+                </div>
+                <div class="col-sm-8 header-links">
+                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>home</a>
+                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>about</a>
+                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>work</a>
+                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>services</a>
+                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>resources</a>
+                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>articles</a>
+                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>contact</a>
+                    <a class="link-section" href="#">
+                        <span class="link-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                        <span>Read more</span>
+                    </a>
+                </div>
             </div>
         </div>
     </header>
@@ -35,13 +48,13 @@
             <div>
                 <div class="col-sm-8">
                     <div>
-                    Featured Products
+                        Featured Products
                     </div>
                     <img src="/images/site-lipsum-media/featured-products.png">
                 </div>
                 <div class="col-sm-4">
                     <div>
-                    Product Description    
+                        Product Description
                     </div>
                     <img src="/images/site-lipsum-media/product-description.png">
                     <!--<a class="link-clicker" href="#">Read More</a>-->
@@ -94,7 +107,7 @@
                 <a class="link-section" href="#">services</a>
                 <a class="link-section" href="#">resources</a>
                 <a class="link-section" href="#">articles</a>
-                <a class="link-section" href="#">contact</a>    
+                <a class="link-section" href="#">contact</a>
             </div>
         </div>
     </footer>
