--- a/views/pages/site-lipsum-media.ejs
+++ b/views/pages/site-lipsum-media.ejs
@@ -26,16 +26,33 @@
                     <div class="header-title"><span style="font-weight: bold;">Lipsum</span> Media</div>
                 </div>
                 <div class="col-sm-8 header-links">
-                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>home</a>
-                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>about</a>
-                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>work</a>
-                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>services</a>
-                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>resources</a>
-                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>articles</a>
-                    <a class="link-section" href="#"><i class="fa fa-arrow-right header-arrow"></i>contact</a>
-                    <a class="link-section" href="#">
-                        <span class="link-arrow-right"><i class="fa fa-arrow-right"></i></span>
-                        <span>Read more</span>
+                    <a class="header-link-single" href="#home">
+                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                        <span>home</span>
+                    </a>
+                    <a class="header-link-single" href="#about">
+                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                        <span>about</span>
+                    </a>
+                    <a class="header-link-single" href="#work">
+                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                        <span>work</span>
+                    </a>
+                    <a class="header-link-single" href="#services">
+                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                        <span>services</span>
+                    </a>
+                    <a class="header-link-single" href="#resources">
+                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                        <span>resources</span>
+                    </a>
+                    <a class="header-link-single" href="#articles">
+                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                        <span>articles</span>
+                    </a>
+                    <a class="header-link-single" href="#contact">
+                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                        <span>contact</span>
                     </a>
                 </div>
             </div>
