--- a/views/pages/site-lipsum-media.ejs
+++ b/views/pages/site-lipsum-media.ejs
@@ -84,21 +84,56 @@
         <div class="section-content">
             <div class="col-sm-3">
                 <div class="section-title">our <span class="section-title-emph">services</span></div>
+                <ul id="services-list">
+                    <li>
+                        <a class="services-link" href="#">
+                        <span class="link-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                        <span>Ac tristique sagittis turpis</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="services-link" href="#">
+                        <span class="link-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                        <span>Duis mus nec porttitor</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="services-link" href="#">
+                        <span class="link-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                        <span>Phasellus lectus cras</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <div class="col-sm-5">
                 <div class="section-title">did you <span class="section-title-emph">know?</span></div>
-                <div>quatis alique mos et aut occae cum, veliquaspit quo quam, si idem reprorisqui doluptatur accum si sunt ut officiisto enecab id et aut es et laboribusam endi rerum as minullorent officiatum non cuscium quuntem</div>
+                <div>Ac tristique sagittis turpis dis purus egestas! Duis mus nec porttitor hac ac dictumst, porttitor eros adipiscing elementum tincidunt urna mus porttitor odio, non tristique adipiscing lorem, sed nec vel adipiscing sit, quis platea parturient sit adipiscing et massa . Risus, placerat. Augue etiam et dis velit ut, auctor et, duis dolor nunc nunc, augue nisi nascetur, porta</div>
                 <a class="link-clicker" href="#"><span class="link-text">Read more</span><span class="link-arrow-right"><i class="fa fa-arrow-right"></i></span></a>
             </div>
             <div class="col-sm-4">
                 <div class="section-title"><span class="section-title-emph">contact</span></div>
                 <div>
-                    <div class="col-sm-2">
-                        Ph
-                    </div>
-                    <div class="col-sm-10">
-                        203-810-4800
-                    </div>
+                    <ul id="contact-list">
+                        <li>
+                            <span class="icon-container"><i class="fa fa-mobile"></i></span>
+                            <span>203-810-4300</span>
+                        </li>
+                        <li>
+                            <span class="icon-container"><i class="fa fa-print"></i></span>
+                            <span>203-810-4300</span>
+                        </li>
+                        <li>
+                            <span class="icon-container"><i class="fa fa-envelope"></i></span>
+                            <span>Contact@lipsum.com</span>
+                        </li>
+                        <li>
+                            <span class="icon-container"><i class="fa fa-home"></i></span>
+                            <span>50 Washington Street<br>
+                            Suite 1048<br>
+                            Lipsume 0644
+                            </span>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
