'LM' spacing @ services

--- a/public/stylesheets/site-lipsum-media.css
+++ b/public/stylesheets/site-lipsum-media.css
@@ -145,6 +145,9 @@ a.link-section{
     color: #000;
     text-decoration: none;
 }
+.services-columns :not(:last-child){
+    padding-right: 50px;
+}
 .col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,.col-sm-10,.col-sm-11,.col-sm-12{float:left;}
 .col-sm-12{width:100%;}
 .col-sm-11{width:91.66666667%;}
