--- a/views/pages/site-lipsum-media.ejs
+++ b/views/pages/site-lipsum-media.ejs
@@ -82,7 +82,7 @@
 
     <div class="section">
         <div class="section-content">
-            <div class="col-sm-3">
+            <div class="col-sm-3 services-columns">
                 <div class="section-title">our <span class="section-title-emph">services</span></div>
                 <ul id="services-list">
                     <li>
@@ -105,12 +105,12 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-sm-5">
+            <div class="col-sm-6 services-columns">
                 <div class="section-title">did you <span class="section-title-emph">know?</span></div>
                 <div>Ac tristique sagittis turpis dis purus egestas! Duis mus nec porttitor hac ac dictumst, porttitor eros adipiscing elementum tincidunt urna mus porttitor odio, non tristique adipiscing lorem, sed nec vel adipiscing sit, quis platea parturient sit adipiscing et massa . Risus, placerat. Augue etiam et dis velit ut, auctor et, duis dolor nunc nunc, augue nisi nascetur, porta</div>
                 <a class="link-clicker" href="#"><span class="link-text">Read more</span><span class="link-arrow-right"><i class="fa fa-arrow-right"></i></span></a>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3 services-columns">
                 <div class="section-title"><span class="section-title-emph">contact</span></div>
                 <div>
                     <ul id="contact-list">
