'LM' remove https from font

--- a/views/pages/site-lipsum-media.ejs
+++ b/views/pages/site-lipsum-media.ejs
@@ -5,7 +5,7 @@
     <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css">-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!--<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>-->
-    <link href='https://fonts.googleapis.com/css?family=News+Cycle' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=News+Cycle' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/stylesheets/site-lipsum-media.css">
     <link rel="icon" type="image/png" href="/images/site-lipsum-media/leaf.png" sizes="32x32">
 </head>
