'Notify' and 'GD' remove http: from font reference

--- a/views/pages/site-green-design.ejs
+++ b/views/pages/site-green-design.ejs
@@ -5,7 +5,7 @@
     <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css">-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!--<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>-->
-    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/stylesheets/site-green-design.css">
     <!--<link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">-->
     <link rel="icon" type="image/png" href="/images/site-green-design/leaf.png" sizes="32x32">
