--- a/views/pages/site-graff-pink.ejs
+++ b/views/pages/site-graff-pink.ejs
@@ -5,7 +5,8 @@
     <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css">-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!--<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>-->
-    <link href='//fonts.googleapis.com/css?family=News+Cycle' rel='stylesheet' type='text/css'>
+    <!--<link href='//fonts.googleapis.com/css?family=News+Cycle' rel='stylesheet' type='text/css'>-->
+    <link href='//fonts.googleapis.com/css?family=Sofia' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/stylesheets/site-graff-pink.css">
     <link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">
 </head>
@@ -17,27 +18,22 @@
         <div class="header-content clearfix">
             <div>
                 <div class="col-sm-4 header-logo">
-                    <div class="header-title"><span style="font-weight: bold;">Graff</span> Pink</div>
+                    <div class="header-title">Graff<span style="text-pink"> pink</span></div>
                 </div>
                 <div class="col-sm-8 header-links">
                     <a class="header-link-single" href="#home">
-                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
                         <span>home</span>
                     </a>
                     <a class="header-link-single" href="#about">
-                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
                         <span>about us</span>
                     </a>
                     <a class="header-link-single" href="#services">
-                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
                         <span>services</span>
                     </a>
                     <a class="header-link-single" href="#articles">
-                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
                         <span>contact</span>
                     </a>
-                    <a class="header-link-single" href="#contact">
-                        <span class="header-arrow-right"><i class="fa fa-arrow-right"></i></span>
+                    <a class="header-link-single login" href="#contact">
                         <span>login</span>
                     </a>
                 </div>
@@ -48,12 +44,13 @@
     <div class="section" id="section-1">
         <div class="section-content clearfix">
             <div class="section-main-title">Welcome to pink</div>
+            <div class="section-sub-title">A multi purpose theme from cssauthor.com</div>
         </div>
     </div>
 
-    <div class="section">
+    <div class="section" id="section-2">
         <div class="section-content">
-            <div>Lorem Ipsum is simply dummy</div>
+            <div class="section-title">Lorem Ipsum is simply dummy</div>
             <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
             printer took a galley of type and scrambled it to make a type specimen book. It has survived
