--- a/views/pages/site-graff-pink.ejs
+++ b/views/pages/site-graff-pink.ejs
@@ -51,13 +51,9 @@
     <div class="section" id="section-2">
         <div class="section-content">
             <div class="section-title">Lorem Ipsum is simply dummy</div>
-            <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-            printer took a galley of type and scrambled it to make a type specimen book. It has survived
-            not only five centuries, but also the leap into electronic typesetting, remaining essentially
-            unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-            Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
-            including versions of Lorem Ipsum.</div>
+            <div class="section-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+                recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
             <div class="col-sm-3 services-columns">
                 tickets
             </div>
@@ -73,31 +69,33 @@
         </div>
     </div>
 
-    <div class="section">
+    <div class="section" id="section-3">
         <div class="section-content">
-            <div class="section-title">Lorem Ipsum is simply</div>
-            <div>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-            printer took a galley of type and scrambled it to make a type specimen book. It has survived
-            not only five centuries, but also the leap into electronic typesetting, remaining essentially
-            unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-            Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
-            including versions of Lorem Ipsum.
+            <div class="col-sm-3 col-padding">
+                <img style="width: 100%;" src="/images/site-graff-pink/picpic.png">
+            </div>
+            <div class="col-sm-9 col-padding">
+                <div class="section-title">Lorem Ipsum is simply</div>
+                <div class="section-text">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                    survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
+                    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </div>
             </div>
         </div>
     </div>
-    <div class="section">
+    <div class="section" id="section-4">
         <div class="section-content">
-            <div class="section-title">Lorem Ipsum is simply</div>
-            <div>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-            printer took a galley of type and scrambled it to make a type specimen book. It has survived
-            not only five centuries, but also the leap into electronic typesetting, remaining essentially
-            unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-            Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
-            including versions of Lorem Ipsum.
+            <div class="col-sm-3 col-padding">
+                <img style="width: 100%;" src="/images/site-graff-pink/picpic.png">
+            </div>
+            <div class="col-sm-9 col-padding">
+                <div class="section-title">Lorem Ipsum is simply</div>
+                <div class="section-text">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                    survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
+                    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </div>
             </div>
         </div>
     </div>
@@ -109,14 +107,14 @@
             <div class="col-sm-2"></div>
             <div class="col-sm-2"></div>
             <div class="col-sm-4"></div>
-                <a class="link-section" href="#">home</a>
-                <a class="link-section" href="#">about</a>
-                <a class="link-section" href="#">work</a>
-                <a class="link-section" href="#">services</a>
-                <a class="link-section" href="#">resources</a>
-                <a class="link-section" href="#">articles</a>
-                <a class="link-section" href="#">contact</a>
-            </div>
+            <a class="link-section" href="#">home</a>
+            <a class="link-section" href="#">about</a>
+            <a class="link-section" href="#">work</a>
+            <a class="link-section" href="#">services</a>
+            <a class="link-section" href="#">resources</a>
+            <a class="link-section" href="#">articles</a>
+            <a class="link-section" href="#">contact</a>
+        </div>
         </div>
     </footer>
 
