--- a/views/pages/site-graff-pink.ejs
+++ b/views/pages/site-graff-pink.ejs
@@ -27,7 +27,7 @@
                     <a class="header-link-single" href="#about">
                         <span>about us</span>
                     </a>
-                    <a class="header-link-single" href="#services">
+                    <a class="header-link-single" href="#section-2">
                         <span>services</span>
                     </a>
                     <a class="header-link-single" href="#articles">
@@ -49,22 +49,25 @@
     </div>
 
     <div class="section" id="section-2">
+        <a href="services"></a>
         <div class="section-content">
             <div class="section-title">Lorem Ipsum is simply dummy</div>
             <div class="section-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
                 book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
                 recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
-            <div class="col-sm-3 services-columns">
-                tickets
-            </div>
-            <div class="col-sm-3 services-columns">
-                camera
-            </div>
-            <div class="col-sm-3 services-columns">
-                beer
-            </div>
-            <div class="col-sm-3 services-columns">
-                devices
+            <div class="services-list">
+                <div class="col-sm-3 services-columns">
+                    <div class="icon-container" id="serv-tickets"><i class="fa fa-ticket"><span class="icon-text">tickets</span></i></div>
+                </div>
+                <div class="col-sm-3 services-columns">
+                    <div class="icon-container" id="serv-camera"><i class="fa fa-camera"><span class="icon-text">camera</span></i></div>
+                </div>
+                <div class="col-sm-3 services-columns">
+                    <div class="icon-container" id="serv-beer"><i class="fa fa-beer"><span class="icon-text">beer</span></i></div>
+                </div>
+                <div class="col-sm-3 services-columns">
+                    <div class="icon-container" id="serv-devices"><i class="fa fa-tv"><span class="icon-text">devices</span></i></div>
+                </div>
             </div>
         </div>
     </div>
@@ -100,20 +103,71 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="clearfix">
         <div class="footer-content">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-2"></div>
-            <div class="col-sm-2"></div>
-            <div class="col-sm-2"></div>
-            <div class="col-sm-4"></div>
-            <a class="link-section" href="#">home</a>
-            <a class="link-section" href="#">about</a>
-            <a class="link-section" href="#">work</a>
-            <a class="link-section" href="#">services</a>
-            <a class="link-section" href="#">resources</a>
-            <a class="link-section" href="#">articles</a>
-            <a class="link-section" href="#">contact</a>
+            <div class="col-sm-2 col-footer">
+                Sub Menu
+                <ul>
+                    <li>Android</li>
+                    <li>Apps</li>
+                    <li>Articles</li>
+                    <li>Backgrounds</li>
+                    <li>Blogger</li>
+                    <li>Books</li>
+                    <li>Coding</li>
+                </ul>
+            </div>
+            <div class="col-sm-2 col-footer">
+                Sub Menu
+                <ul>
+                    <li>Freebies</li>
+                    <li>Greetings</li>
+                    <li>Icons</li>
+                    <li>Illustrator</li>
+                    <li>Inspiration</li>
+                    <li>iPad</li>
+                    <li>iPhone</li>
+                </ul>
+            </div>
+            <div class="col-sm-2 col-footer">
+                Sub Menu
+                <ul>
+                    <li>Drupal</li>
+                    <li>Fonts</li>
+                    <li>Freebies</li>
+                    <li>Greetings</li>
+                    <li>Icons</li>
+                    <li>Illustrator</li>
+                    <li>Inspiration</li>
+                </ul>
+            </div>
+            <div class="col-sm-2 col-footer">
+                Sub Menu
+                <ul>
+                    <li>JQuery</li>
+                    <li>Magento</li>
+                    <li>Mobile</li>
+                    <li>Photoshop</li>
+                    <li>Plugins</li>
+                    <li>Resource</li>
+                    <li>Templates</li>
+                </ul>
+            </div>
+            <div class="col-sm-4 col-footer">
+                <div class="col-sm-3">
+                    <div class="icon-container"><i class="fa fa-facebook"></i></div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="icon-container"><i class="fa fa-twitter"></i></div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="icon-container"><i class="fa fa-dribbble"></i></div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="icon-container"><i class="fa fa-share-alt"></i></div>
+                </div>
+                Copyright © 2009–2016 example.com
+            </div>
         </div>
         </div>
     </footer>
